--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Email: <a href="mailto:your@email.com">your@email.com</a></p>
+      <p>Email: <a href="mailto:your@email.com">goldenlae89@email.com</a></p>
       <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+      <p>YouTube: <a href="https://www.youtube.com/@lae-techbank-f4p" target="_blank">Lae's TechBank</a></p>
     </section>
   </main>
 
