--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="contact">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:your@email.com">goldenlae89@email.com</a></p>
-      <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/lae-lae-shwe-0971b420a/" target="_blank">linkedin.com/in/yourprofile</a></p>
       <p>YouTube: <a href="https://www.youtube.com/@lae-techbank-f4p" target="_blank">Lae's TechBank</a></p>
     </section>
   </main>
